Fixed scrollbars on Home page

--- a/src/app/components/Grid.css
+++ b/src/app/components/Grid.css
@@ -4,6 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden; /* This prevents scrollbars if the content is larger than the container */
+  align-items: center;
+  justify-content: center;
   z-index: -1; /* Ensures the grid is behind other content */
 }
