--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,11 @@
 @tailwind utilities;
 
 
-html {
-  scroll-behavior: smooth;
+html, body {
+  overflow: hidden;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -75,4 +78,22 @@ body {
 .fade-out {
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
+}
+
+.text-container {
+  word-wrap: break-word; /* Legacy browsers */
+  overflow-wrap: break-word; /* Preferred for modern browsers */
+}
+
+.flexible-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  margin: auto;
+  max-width: 90%; /* Limits the width to 90% of its parent container */
+  min-width: 300px; /* Ensures it doesn't get too small */
+  width: auto; /* Allows the width to adjust based on the content and screen size */
+  box-sizing: border-box; /* Includes padding and border in the element's total width and height */
 }
